versions/v2.9/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
= 将 {rancher-product-name} 迁移到新集群
:page-languages: [en, zh]
:revdate: 2025-12-09
:page-revdate: {revdate}

如果你要将 Rancher 迁移到一个新的 Kubernetes 集群，先不要在新集群上安装 Rancher。这是因为如果将 Rancher 还原到已安装 Rancher 的新集群，可能会导致问题。

== 先决条件

以下说明假设你已经完成xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc[备份创建]，并且已经安装了用于部署 Rancher 的新 Kubernetes 集群。

[CAUTION]
====

你需要使用与第一个集群中设置的 Server URL 相同的主机名。否则，下游集群会在 UI 的管理页面显示为不可用，并且你不能点击集群内或集群的 *Explore* 按钮。
====


Rancher 必须是 2.5.0 或更高版本。

Rancher 可以安装到任意 Kubernetes 集群上，包括托管的 Kubernetes 集群（如 Amazon EKS 集群）。如需获取安装 Kubernetes 的帮助，请参见 Kubernetes 发行版的文档。你也可以使用以下 Rancher 的 Kubernetes 发行版：

* https://rancher.com/docs/rke/latest/en/installation/[RKE Kubernetes 安装文档]
* https://rancher.com/docs/k3s/latest/en/installation/[K3s Kubernetes 安装文档]

== 1. 安装 rancher-backup Helm Chart

安装 https://github.com/rancher/backup-restore-operator/tags[rancher-backup chart]，请使用 2.x.x 主要版本内的版本：

. 添加 helm 仓库：
+
[,bash]
----
helm repo add rancher-charts https://charts.rancher.io
helm repo update
----

. 使用 2.x.x rancher-backup 版本设置 `CHART_VERSION` 变量：
+
[,bash]
----
helm search repo --versions rancher-charts/rancher-backup
CHART_VERSION=<2.x.x>
----

. 安装 Chart：
+
[,bash]
----
helm install rancher-backup-crd rancher-charts/rancher-backup-crd -n cattle-resources-system --create-namespace --version $CHART_VERSION
helm install rancher-backup rancher-charts/rancher-backup -n cattle-resources-system --version $CHART_VERSION
----
+

[NOTE]
====
以上假设你的环境具有到 Docker Hub 的出站连接。

对于**离线环境**，在安装 rancher-backup Helm Chart 时，使用下面的 Helm 值从你的私有镜像仓库中拉取 `backup-restore-operator` 和 `kubectl` 镜像。

[,bash]
----
--set image.repository <registry>/rancher/backup-restore-operator --set global.kubectl.repository=<registry>/rancher/kubectl
----
====


== 2. 使用 Restore 自定义资源来还原备份

. 在使用 S3 对象存储作为需要使用凭证的还原的备份源时，请在此集群中创建一个 `Secret` 对象以添加 S3 凭证。Secret 数据必须有两个密钥，分别是包含 S3 凭证的 `accessKey` 和 `secretKey`。
+
你可以在任何命名空间中创建 Secret，本示例使用 default 命名空间。
+
[,bash]
----
kubectl create secret generic s3-creds \
  --from-literal=accessKey=<access key> \
  --from-literal=secretKey=<secret key>
----
+

[NOTE]
====
在上面的命令中添加你的 Access Key 和 Secret Key 作为 `accessKey` 和 `secretKey` 的值。
====


. 创建一个 `Restore` 对象：
+
在迁移期间，`prune` 必须设置为 `false`。请参见下面的示例：
+
[,yaml]
----
# restore-migration.yaml
apiVersion: resources.cattle.io/v1
kind: Restore
metadata:
  name: restore-migration
spec:
  backupFilename: backup-b0450532-cee1-4aa1-a881-f5f48a007b1c-2020-09-15T07-27-09Z.tar.gz
  // highlight-next-line
  prune: false
  // highlight-next-line
  encryptionConfigSecretName: encryptionconfig
  storageLocation:
    s3:
      credentialSecretName: s3-creds
      credentialSecretNamespace: default
      bucketName: backup-test
      folder: ecm1
      region: us-west-2
      endpoint: s3.us-west-2.amazonaws.com
----
+

[NOTE]
.重要提示：
====
只有在创建备份时启用了加密功能时，才需要设置 `encryptionConfigSecretName` 字段。

如果适用，请提供包含加密配置文件的 `Secret` 对象的名称。如果你只有加密配置文件，但没有在此集群中创建 Secret，请按照以下步骤创建 Secret。

 .. 创建xref:./configuration/backup.adoc#_加密[加密配置文件]
 .. 下面的命令使用一个名为 `encryption-provider-config.yaml` 的文件，使用了 `--from-file` 标志。将 `EncryptionConfiguration` 保存到名为 `encryption-provider-config.yaml` 的文件中之后，运行以下命令：

[,bash]
----
kubectl create secret generic encryptionconfig \
  --from-file=./encryption-provider-config.yaml \
  -n cattle-resources-system
----
====


. 应用清单，并监控 Restore 的状态：
 .. 应用 `Restore` 对象资源：
+
[,bash]
----
kubectl apply -f restore-migration.yaml
----

 .. 观察 Restore 的状态：
+
[,bash]
----
kubectl get restore
----

 .. 查看恢复日志：
+
[,bash]
----
kubectl logs -n cattle-resources-system --tail 100 -f -l app.kubernetes.io/instance=rancher-backup
----

 .. Restore 资源的状态变成 `Completed` 后，你可以继续安装 cert-manager 和 Rancher。

== 3. 安装 cert-manager

按照在 Kubernetes 上安装 cert-manager的步骤xref:installation-and-upgrade/install-rancher.adoc#_4_安装_cert_manager[安装 cert-manager]。

== 4. 使用 Helm 安装 Rancher

使用与第一个集群上使用的相同版本的 Helm 来安装 Rancher：

[,bash]
[,bash]
----
helm install rancher rancher-prime/rancher \
  --namespace cattle-system \
  --set hostname=<same hostname as the server URL from the first Rancher server> \
  --version x.y.z
----

[NOTE]
====

如果原始的 Rancher 环境正在运行，你可以使用 kubeconfig 为原始环境收集当前值：

[,bash]
----
helm get values rancher -n cattle-system -o yaml > rancher-values.yaml
----

你可以使用 `rancher-values.yaml` 文件来复用这些值。确保将 kubeconfig 切换到新的 Rancher 环境。

[,bash]
----
helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
----
====


== 5. Redirect Traffic to the New Cluster

After migration completes, update your DNS records and any load balancers, so that traffic is routed correctly to the migrated cluster. Remember that you must use the same hostname that was set as the server URL in the original cluster.

Full instructions on how to redirect traffic to the migrated cluster differ based on your specific environment. Refer to your hosting provider's documentation for more details.

== 6. Scale Down the Original Rancher Instance

After redirecting traffic to the new Rancher environment, *scale the original Rancher instance to 0 replicas* so it no longer contacts your managed clusters.

Leaving the old server up can cause agents to keep contacting the original `server-url`, which often leaves clusters stuck in *Updating* in the new environment.

[,bash]
----
kubectl scale deployment rancher -n cattle-system --replicas=0
----

[NOTE]
====
If you wish to keep the original Rancher environment running, you can also restart the `cattle-cluster-agent` pods on each cluster connected to your Rancher environment.
[,bash]
----
kubectl rollout restart deployment cattle-cluster-agent -n cattle-system
----
This triggers a rolling restart of the agent so it re-establishes the connection to the new Rancher environment.
====
